<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">


  <ScrollView
    android:scrollbarStyle="outsideOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
      android:id="@+id/topPanel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:orientation="vertical">


      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/race_name"
          style="@style/editTextStyle"
          android:hint="@string/race_name"
          android:text="@string/my_awesome_race"
          android:inputType="textNoSuggestions" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/race_description"
          style="@style/editTextStyle"
          android:hint="@string/race_description"
          android:text="@string/trying_to_reach_1km_for_less_than_20sec"
          android:inputType="textNoSuggestions" />

      </android.support.design.widget.TextInputLayout>


      <TextView
        style="@style/textViewStyle"
        android:gravity="center_vertical"
        android:text="@string/my_car" />

      <Spinner
        android:id="@+id/personal_cars_create_race_spinner"
        style="@style/spinnerStyle" />

      <TextView
        android:id="@+id/textView"
        style="@style/textViewStyle"
        android:gravity="center_vertical"
        android:text="@string/race_type" />

      <Spinner
        android:id="@+id/race_type_spinner"
        style="@style/spinnerStyle" />

      <FrameLayout
        android:id="@+id/race_type_create_race_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/number_of_other_competitors"
          style="@style/editTextStyle"
          android:hint="@string/number_of_opponents"
          android:inputType="number"
          android:text="@string/default_value_for_number_of_racers" />

        <TextView
          android:id="@+id/warning_for_units_speed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/alert_maximum_8_players"
          android:textColor="@color/colorRed" />

      </android.support.design.widget.TextInputLayout>

      <CheckBox
        android:id="@+id/video_stream_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:checked="false"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/stream_video" />

      <CheckBox
        android:id="@+id/video_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:checked="false"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/record_video" />

      <CheckBox
        android:id="@+id/obd_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/get_obd_data" />


      <Button
        android:id="@+id/create_race_btn"
        style="@style/normalButton"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_buttons"
        android:onClick="createRaceBtnOnClickListener"
        android:text="@string/create_race" />
    </LinearLayout>
  </ScrollView>

  <include layout="@layout/include_progress_overlay" />
</RelativeLayout>