<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:orientation="vertical">

      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/alias_car"
          style="@style/editTextStyle"
          android:hint="@string/alias_text_view_string"
          android:inputType="textNoSuggestions" />

      </android.support.design.widget.TextInputLayout>

      <TextView
        style="@style/textViewStyle"
        android:labelFor="@+id/type_of_vehicle"
        android:text="@string/select_type_of_vehicle" />

      <Spinner
        android:id="@+id/type_of_vehicle"
        style="@style/spinnerStyle" />

      <TextView
        style="@style/textViewStyle"
        android:labelFor="@+id/car_make_spinner"
        android:text="@string/select_vehicle_make" />

      <Spinner
        android:id="@+id/car_make_spinner"
        style="@style/spinnerStyle" />

      <TextView
        style="@style/textViewStyle"
        android:labelFor="@+id/car_model_autocomplete"
        android:text="@string/select_car_model" />

      <Spinner
        android:id="@+id/car_model_spinner"
        style="@style/spinnerStyle" />

      <TextView
        style="@style/textViewStyle"
        android:text="@string/select_car_year" />

      <Spinner
        android:id="@+id/year_car"
        style="@style/spinnerStyle" />

      <TextView
        style="@style/textViewStyle"
        android:text="@string/car_engine_cylinders" />

      <Spinner
        android:id="@+id/engine_cylinders_car"
        style="@style/spinnerStyle" />

      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/engine_volume_car"
          style="@style/editTextStyle"
          android:hint="@string/car_engine_volume"
          android:inputType="number" />

      </android.support.design.widget.TextInputLayout>


      <android.support.design.widget.TextInputLayout style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/bhp_car"
          style="@style/editTextStyle"
          android:hint="@string/car_bhp"
          android:inputType="number" />

      </android.support.design.widget.TextInputLayout>


      <TextView
        style="@style/textViewStyle"
        android:text="@string/select_car_fuel" />

      <Spinner
        android:id="@+id/fuel_types_spinner"
        style="@style/spinnerStyle" />

      <Button
        android:id="@+id/add_car"
        style="@style/normalButton"
        android:layout_width="match_parent"
        android:onClick="addCarBtnOnClickListener"
        android:text="@string/save_car" />

    </LinearLayout>
  </ScrollView>
  <include layout="@layout/include_progress_overlay" />
</RelativeLayout>