<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/joinrace_activity_linear_layout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/join_race_select_car"
        style="@style/textViewStyle"
        android:gravity="center_vertical"
        android:text="@string/my_car" />

      <Spinner
        android:id="@+id/personal_cars_join_race_spinner"
        style="@style/spinnerStyle" />


      <android.support.design.widget.TextInputLayout
        android:id="@+id/join_race_id"
        style="@style/inputLayoutStyle">

        <EditText
          android:id="@+id/race_id_join_race"
          style="@style/editTextStyle"
          android:hint="@string/race_id"
          android:inputType="number" />

      </android.support.design.widget.TextInputLayout>

      <CheckBox
        android:id="@+id/video_stream_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:checked="true"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/stream_video" />

      <CheckBox
        android:id="@+id/video_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:checked="true"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/record_video" />

      <CheckBox
        android:id="@+id/obd_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:onClick="checkVideoAndOBD"
        android:text="@string/get_obd_data" />

      <Button
        android:id="@+id/join_race_btn"
        style="@style/normalButton"
        android:layout_width="match_parent"
        android:onClick="joinRaceBtnOnClickListener"
        android:text="@string/join_race" />

    </LinearLayout>

  </ScrollView>
  <include layout="@layout/include_progress_overlay" />
</RelativeLayout>
